--- a/Pi4/src/main/resources/application.properties
+++ b/Pi4/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.application.name=usermanagement
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.config.import=optional:configserver:http://localhost:8888
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
 
 
