--- a/GestionPlanning/src/main/resources/application.properties
+++ b/GestionPlanning/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=GestionPlanning
 # Eureka Instance Configuration
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
-# Spring Cloud Config Server (Optional, if you need it)
+spring.jackson.stream-write-constraints.max-nesting-depth=2000
+logging.level.com.fasterxml.jackson.databind=DEBUG
 spring.config.import=optional:configserver:http://localhost:8888
 
 # PostgreSQL Configuration
