--- a/GestionPlanning/src/main/resources/application.properties
+++ b/GestionPlanning/src/main/resources/application.properties
@@ -1,24 +1,25 @@
 # Application Name
 spring.application.name=GestionPlanning
 
-# Eureka Instance Configuration
+# Eureka Configuration
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.jackson.stream-write-constraints.max-nesting-depth=2000
+
+# Logging Configuration
 logging.level.com.fasterxml.jackson.databind=DEBUG
 spring.config.import=optional:configserver:http://localhost:8888
 
-# PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/PlanningDB
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Database Configuration (MySQL)
+spring.datasource.url=jdbc:mysql://localhost:3306/planningDB?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Configuration
+# JPA/Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# Web Server (Tomcat) configuration
+# Web Server (Tomcat) Configuration
 server.port=8086
 server.servlet.context-path=/planning
