--- a/Gateway/src/main/resources/application.properties
+++ b/Gateway/src/main/resources/application.properties
@@ -19,6 +19,11 @@ spring.cloud.gateway.routes[1].id=USERMANAGEMENT
 spring.cloud.gateway.routes[1].uri=http://localhost:8082
 spring.cloud.gateway.routes[1].predicates[0]=Path=/GE/**
 
+spring.cloud.gateway.routes[2].id=SUPPLIER
+spring.cloud.gateway.routes[2].uri=http://localhost:8095
+spring.cloud.gateway.routes[2].predicates[0]=Path=/**
+
+
 
 
 
