--- a/userappAN/angular.json
+++ b/userappAN/angular.json
@@ -26,6 +26,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+
               "src/styles.css",
               "src/assets/gantt/dhtmlxgantt.css"
             ],
