--- a/userappAN/package.json
+++ b/userappAN/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@angular/animations": "^16.2.12",
     "@angular/cdk": "^16.2.14",
-    "@angular/common": "^16.2.0",
+    "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
@@ -27,10 +27,12 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "dhtmlx-gantt": "^9.0.3",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "ng-openapi-gen": "^0.52.0",
+    "ng2-charts": "^4.1.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
