--- a/userappAN/package.json
+++ b/userappAN/package.json
@@ -23,17 +23,24 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "angular-code-input": "^2.0.0",
+    "angularx-qrcode": "^16.0.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "dhtmlx-gantt": "^9.0.3",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "ng-openapi-gen": "^0.52.0",
+    "ng2-charts": "^4.1.1",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -41,6 +48,7 @@
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
