--- a/userappAN/package.json
+++ b/userappAN/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@babylonjs/core": "^7.52.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@ngx-translate/core": "^16.0.4",
@@ -30,6 +31,7 @@
     "angularx-qrcode": "^16.0.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "compromise": "^14.14.4",
     "dhtmlx-gantt": "^9.0.3",
     "jquery": "^3.7.1",
     "jspdf": "^3.0.0",
@@ -39,6 +41,7 @@
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "three": "^0.174.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
@@ -49,6 +52,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/qrcode": "^1.5.5",
+    "@types/three": "^0.174.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
