--- a/userappAN/package.json
+++ b/userappAN/package.json
@@ -26,6 +26,7 @@
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "angular-code-input": "^2.0.0",
+    "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "dhtmlx-gantt": "^9.0.3",
