--- a/userappAN/package.json
+++ b/userappAN/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "@react-oauth/google": "^0.12.1",
     "angular-code-input": "^2.0.0",
     "angularx-qrcode": "^16.0.0",
     "bootstrap": "^5.3.3",
@@ -52,6 +53,8 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/qrcode": "^1.5.5",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/three": "^0.174.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
