--- a/userappAN/tsconfig.json
+++ b/userappAN/tsconfig.json
@@ -19,6 +19,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "jsx": "react-jsx",
     "lib": [
       "ES2022",
       "dom"
