--- a/Supplier/pom.xml
+++ b/Supplier/pom.xml
@@ -84,6 +84,13 @@
             <version>8.0.33</version> <!-- Remplace avec la dernière version disponible -->
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+
+
 
 
 
