COMMLIV+PROJ/CHANGES

--- a/GestionLivrables/src/main/resources/application.properties
+++ b/GestionLivrables/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=GestionLivrables
 
-# Eureka Instance Configuration
+# Web Server (Tomcat) configuration
+server.port=8085
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#Swagger
+server.servlet.context-path=/livrable
 #eureka register
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #Config Client prop:
 spring.cloud.config.import-check.enabled=false
 spring.cloud.config.fail-fast=true
@@ -19,11 +24,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/LivrableDB?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=
 
-# ## JPA / HIBERNATE
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 
 
-# Web Server (Tomcat) configuration
-server.port=8085
-server.servlet.context-path=/livrable
+
