--- a/userappAN/package.json
+++ b/userappAN/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/google-maps": "^16.2.14",
     "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
@@ -31,7 +32,7 @@
     "angularx-qrcode": "^16.0.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
-    "dhtmlx-gantt": "^9.0.3",
+    "dhtmlx-gantt": "^9.0.7",
     "jquery": "^3.7.1",
     "jspdf": "^3.0.0",
     "jwt-decode": "^4.0.0",
