--- a/GestionLivrables/pom.xml
+++ b/GestionLivrables/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.30</version> <!-- Check for latest version if needed -->
+		</dependency>
+
 
 	</dependencies>
 
