--- a/userappAN/package.json
+++ b/userappAN/package.json
@@ -33,8 +33,9 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "dhtmlx-gantt": "^9.0.7",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
-    "jspdf": "^3.0.0",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "ng-openapi-gen": "^0.52.0",
     "ng2-charts": "^4.1.1",
