déploiement_RF_model

--- a/Supplier/src/main/resources/application.properties
+++ b/Supplier/src/main/resources/application.properties
@@ -47,3 +47,7 @@ spring.mail.username=benelkaabarij@gmail.com
 spring.mail.password=202JFT3648
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# Flask API URL configuration
+flask.api.url=http://localhost:5000
