--- a/Supplier/src/main/resources/application.properties
+++ b/Supplier/src/main/resources/application.properties
@@ -6,27 +6,17 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # Spring Cloud Config Server (Optional, if you need it)
 spring.config.import=optional:configserver:http://localhost:8888
 
-###########################################
-#spring.datasource.url=jdbc:postgresql://localhost:5432/supplierdb
-#spring.datasource.username=postgres
-#spring.datasource.password=202JFT3648
-#spring.datasource.driver-class-name=org.postgresql.Driver
 
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
 
 server.port=8095
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/supplierdb
+spring.datasource.url=jdbc:mysql://localhost:3306/supplierdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+springdoc.default-produces-media-type=application/json
 
 
 #huggingface.api.key=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
