--- a/Supplier/src/main/resources/application.properties
+++ b/Supplier/src/main/resources/application.properties
@@ -43,10 +43,17 @@ huggingface.api.key=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
 # SMTP Configuration for sending emails
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=benelkaabarij@gmail.com
-spring.mail.password=202JFT3648
+spring.mail.username=arijabelkaab@gmail.com
+spring.mail.password=owoj yyvo raex uaiw
+spring.mail.protocol=smtp
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+spring.mail.properties.mail.debug=true
+
+
 
 
 # Flask API URL configuration
